--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -2,8 +2,9 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mobile_navigation"
-    app:startDestination="@id/mainActivity">
+    android:id="@+id/nav_graph"
+    app:defaultNavHost="true"
+    app:startDestination="@id/newsListFragment">
 
     <activity
         android:id="@+id/mainActivity"
@@ -22,5 +23,9 @@
         android:id="@+id/detailsFragment"
         android:name="com.fivesysdev.newsapp.DetailsFragment"
         android:label="fragment_details"
-        tools:layout="@layout/fragment_details" />
+        tools:layout="@layout/fragment_details" >
+        <action
+            android:id="@+id/action_detailsFragment_to_newsListFragment"
+            app:destination="@id/newsListFragment" />
+    </fragment>
 </navigation>
