Added navigation from news list to news detaials screen

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -16,16 +16,24 @@
         android:name="com.fivesysdev.newsapp.NewsListFragment"
         android:label="NewsListFragment" >
         <action
-            android:id="@+id/action_newsListFragment_to_detailsFragment2"
-            app:destination="@id/detailsFragment" />
+            android:id="@+id/action_newsListFragment_to_detailsFragment"
+            app:destination="@id/detailsFragment">
+            <argument
+                android:name="title"
+                app:argType="string" />
+            <argument
+                android:name="description"
+                app:argType="string" />
+            <argument
+                android:name="image_url"
+                app:argType="string" />
+        </action>
+
     </fragment>
+
     <fragment
         android:id="@+id/detailsFragment"
         android:name="com.fivesysdev.newsapp.DetailsFragment"
         android:label="fragment_details"
-        tools:layout="@layout/fragment_details" >
-        <action
-            android:id="@+id/action_detailsFragment_to_newsListFragment"
-            app:destination="@id/newsListFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_details" />
 </navigation>
