--- a/app/src/main/res/layout/news_card.xml
+++ b/app/src/main/res/layout/news_card.xml
@@ -15,7 +15,7 @@
 
 
         <ImageView
-            android:id="@+id/news_image"
+            android:id="@+id/image_movie"
             android:layout_width="150dp"
             android:layout_height="100dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -34,7 +34,7 @@
             android:textStyle="bold"
             app:layout_constrainedWidth="true"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
-            app:layout_constraintStart_toEndOf="@+id/news_image"
+            app:layout_constraintStart_toEndOf="@+id/image_movie"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -47,7 +47,7 @@
             android:textSize="15sp"
             app:layout_constraintBottom_toTopOf="@+id/txt_createdby"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
-            app:layout_constraintStart_toEndOf="@+id/news_image"
+            app:layout_constraintStart_toEndOf="@+id/image_movie"
             app:layout_constraintTop_toBottomOf="@+id/txt_name" />
 
         <TextView
