--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,12 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/item_1"
-        android:enabled="true"
-        android:icon="@drawable/ic_news"
-        android:title="News"/>
-    <item
-        android:id="@+id/item_2"
-        android:enabled="true"
-        android:icon="@drawable/ic_star_outline"
-        android:title="Favorite"/>
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/newsListFragment"
+            android:enabled="true"
+            android:icon="@drawable/ic_news"
+            android:title="News" />
+        <item
+            android:id="@+id/favoriteFragment"
+            android:enabled="true"
+            android:icon="@drawable/ic_star_outline"
+            android:title="Favorite" />
+    </group>
 </menu>
